# optimization-methods

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt  main_window.cpp  main_window.h  main_window.ui
apps/controllers/: graphical_method_controller.hpp
cmake/modules/: FindQwt.cmake
include/: graphical_method.hpp  math_utils.hpp
scripts/: broken_lines.py  newtons_method.py  simplex_method.py  transport_problem.py
src/: CMakeLists.txt  graphical_method.cpp  math_utils.cpp
tests/: CMakeLists.txt  graphical_method_test.cpp
